--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="content">
-<h1>xlCluster_go</h1>
+<h1 class="libTop">xlCluster_go</h1>
 
 <p>A stub.</p>
   <div class="f">
