minor changes to web pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ cryptograpic identity.  That is, each has</p>
 <ul>
 <li>a <a href="https://jddixon.github.io/nodeID_go"> NodeID</a>,</li>
 <li>an RSA key used for creating digital signatures (<strong>skPriv</strong>), and</li>
-<li>an RSA key used for encrypting data (<strong>ckPriv</strong>).<br /></li>
+<li>an RSA key used for encrypting data (<strong>ckPriv</strong>).</li>
 </ul>
 
 <p>In other words each cluster member is
@@ -25,7 +25,7 @@ or carries an
 <a href="https://jddixon.github.io/xlNode_go">XLattice Node</a>,
 which incorporates that cryptographic identity.</p>
 
-<p>The NodeID is a unique 160- or 256-bit number.<br />
+<p>The NodeID is a unique 160- or 256-bit number.
 Each of <code>skPriv</code> and <code>ckPriv</code>is a RSA private key, normally
 at least 2048 bits in length.  Each has a corresponding public key
 (<strong>sk</strong> and <strong>ck</strong> respectively) which can be distributed freely without
@@ -75,7 +75,7 @@ Follow the SOFTWARE LICENSE link below for more information on project software 
        </a> project
     </div>
     <div class="logo" >
-      <a href="http://www.xlattice.org">
+      <a href="https://jddixon.github.io/xlattice/">
       <img src="img/xlattice-2014.jpg" alt="the XLattice Project" style="float: right;" >
       </a>
     </div>
