minor fixes to web pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 cryptograpic identity.  That is, each has</p>
 
 <ul>
-<li>a <a href="https://jddixon.github.io/nodeID_go"> NodeID</a>,</li>
+<li>a <a href="https://jddixon.github.io/xlNodeID_go"> NodeID</a>,</li>
 <li>an RSA key used for creating digital signatures (<strong>skPriv</strong>), and</li>
 <li>an RSA key used for encrypting data (<strong>ckPriv</strong>).</li>
 </ul>
